@@ -7,15 +7,23 @@ import (
 
 var (
 	schema = s.Schema{
-		"name": c.Str("pool"),
+		"name":            c.Str("pool"),
+		"process_manager": c.Str("process manager"),
+		"slow_requests":   c.Int("slow requests"),
+		"start_time":      c.Int("start time"),
+		"start_since":     c.Int("start since"),
 		"connections": s.Object{
-			"accepted": c.Int("accepted conn"),
-			"queued":   c.Int("listen queue"),
+			"accepted":         c.Int("accepted conn"),
+			"listen_queue_len": c.Int("listen queue len"),
+			"max_listen_queue": c.Int("max listen queue"),
+			"queued":           c.Int("listen queue"),
 		},
 		"processes": s.Object{
-			"idle":   c.Int("idle processes"),
-			"active": c.Int("active processes"),
+			"active":               c.Int("active processes"),
+			"idle":                 c.Int("idle processes"),
+			"max_active":           c.Int("max active processes"),
+			"max_children_reached": c.Int("max children reached"),
+			"total":                c.Int("total processes"),
 		},
-		"slow_requests": c.Int("slow requests"),
 	}
 )
